"Penambahan Hero Section"

--- a/index.html
+++ b/index.html
@@ -21,7 +21,13 @@
         </a>
       </nav>
       <!-- Hero-->
-      <div class="Hero"></div>
+      <div class="hero-image">
+        <div class="hero-text">
+          <h1 style="font-size:50px">Ninja butuh Liburan</h1>
+          <p>And I'm Ninja Progate</p>
+          <button>ikuti tour</button>
+        </div>
+      </div>
     <!-- Bagian Tour-->
     <div class="Tour"></div>
     <!-- Bagian Paket-->
